--- a/Ex1.html
+++ b/Ex1.html
@@ -9,20 +9,20 @@
 <body>
   
     <label for="favcolor">Test</label>
-    <div>
-    <input type="color" id="favcolor" name="favcolor" size="100" value="#ff0000"> 
+    
+    <input type="color" id="favcolor" class="color" name="favcolor" > 
     
 
 <input type="number"  name="tentacles"
         max="100" value="30" id="nb">
    
-</input>
+
 
 <select type="select" >
 <option value="Garmond">Garmond
 <option value="Verdana">Verdana
 <option value="arial">arial
-</div>
+
 
         <script src="Ex.js"></script>
 </body>
